--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>index</title>
+  <style>
+    body{
+      margin:0;
+      overflow:auto;
+      cursor:default;
+      background:#ffffff;
+    }
+  </style>
+  <script>
+    var Sys=function(){
+      //
+      return{
+        //
+      }
+    }()
+  </script>
+</head> 
+<body></body>
+</html>
