--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>index</title>
+	<title>Index</title>
+	<link rel="shortcut icon" href="//index.hu/assets/images/favicon_big.ico">
 	<style>
 		body{
-    		margin:0;
+    		margin:10px;
       		overflow:auto;
       		cursor:default;
+      		font-size:11px;
+      		text-align:center;
       		background:#ffffff;
+      		font-family:Verdana,Geneva,sans-serif;
     	}
   	</style>
   	<script>
@@ -20,5 +24,5 @@
     	}()
   	</script>
 </head> 
-<body>index</body>
+<body>Index</body>
 </html>
