--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Index</title>
-	<link rel="shortcut icon" href="//index.hu/assets/images/favicon_big.ico">
+	<link rel="shortcut icon" href="/favicon.ico">
 	<style>
 		body{
     		margin:10px;
